Used Free ExerciseDb json file and implemented it
# Conflicts:
#	Project400Backend/src/main/java/com/example/Project400Backend/ExerciseDBAPI/ExerciseDBService.java